@@ -24,6 +24,7 @@ import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.erd.model.ERDAssociation;
 import org.jkiss.dbeaver.erd.model.ERDEntity;
+import org.jkiss.dbeaver.erd.model.ERDEntityAttribute;
 import org.jkiss.dbeaver.erd.model.ERDUtils;
 import org.jkiss.dbeaver.erd.ui.notations.ERDAssociationType;
 import org.jkiss.dbeaver.erd.ui.notations.ERDNotation;
@@ -39,7 +40,6 @@ import org.jkiss.utils.CommonUtils;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CrowsFootDiagramNotation extends ERDNotationBase implements ERDNotation {
 
@@ -61,18 +61,15 @@ public class CrowsFootDiagramNotation extends ERDNotationBase implements ERDNota
                 VoidProgressMonitor monitor = new VoidProgressMonitor();
                 Collection<? extends DBSTableIndex> indexes = ((DBSTable) entity).getIndexes(monitor);
                 if (!CommonUtils.isEmpty(indexes)) {
-                    for (DBSTableIndex index : indexes) {
-                        if (DBUtils.isIdentifierIndex(monitor, index)) {
-                            List<DBSEntityAttribute> entityIdentifierAttributes = DBUtils.getEntityAttributes(monitor, index);
-                            List<DBSEntityAttribute> sourceAttributes = association.getSourceAttributes().stream().map(s -> {
-                                return s.getObject();
-                            }).collect(Collectors.toList());
-                            if (sourceAttributes.containsAll(entityIdentifierAttributes)) {
-                                createSourceDecorator(conn, bckColor, frgColor, ERDAssociationType.ONE_ONLY, LABEL_1);
-                            } else {
-                                createSourceDecorator(conn, bckColor, frgColor, ERDAssociationType.ONE_OR_MANY, LABEL_1_TO_N);
-                            }
-                        }
+                    // get index for require source attributes
+                    List<ERDEntityAttribute> erdSourceAttributes = association.getSourceAttributes();
+                    List<DBSEntityAttribute> attributes = erdSourceAttributes.stream()
+                        .map(ERDEntityAttribute::getObject)
+                        .toList();
+                    if (DBUtils.isUniqueIndexForAttributes(monitor, attributes, entity)) {
+                        createSourceDecorator(conn, bckColor, frgColor, ERDAssociationType.ONE_ONLY, LABEL_1);
+                    } else {
+                        createSourceDecorator(conn, bckColor, frgColor, ERDAssociationType.ONE_OR_MANY, LABEL_1_TO_N);
                     }
                 } else {
                     createSourceDecorator(conn, bckColor, frgColor, ERDAssociationType.ONE_OR_MANY, LABEL_1_TO_N);
@@ -85,6 +82,8 @@ public class CrowsFootDiagramNotation extends ERDNotationBase implements ERDNota
                     createTargetDecorator(conn, bckColor, frgColor, ERDAssociationType.ONE_ONLY, LABEL_1);
                 }
             } catch (DBException e) {
+                log.error(e.getMessage(), e);
+            } catch (InterruptedException e) {
                 log.error(e.getMessage(), e);
             }
         }
@@ -114,6 +113,8 @@ public class CrowsFootDiagramNotation extends ERDNotationBase implements ERDNota
         conn.add(getLabel(label, frgColor), trgEndpointLocator);
         conn.setTargetDecoration(targetDecor);
     }
+
+
 
     @Override
     public void applyNotationForEntities(PolylineConnection conn, ERDAssociation association, Color bckColor, Color frgColor) {
